--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "expo": "~48.0.15",
+    "expo-file-system": "^15.2.2",
+    "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "expo-dev-client": "~2.2.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-media-library": "~15.2.3",
+    "expo-permissions": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
